Copy a disabled field is an instant crash #56947

Closed
opened 2018-09-28 12:38:05 +02:00 by Hjalti Hjálmarsson · 6 comments

System Information
Xbuntu / AMD

Blender Version
a33034c

Short description of error
Copy a disabled field is an instant crash

Exact steps for others to reproduce the error
New file
Create an armature
Go to edit mode
Extrude the bone so you have also a child bone
Go to pose mode
Select the child bone
Go to the Bone panel and scroll down to Relations
Hover over the Parent field (which should be disabled but shows the name of the parent bone)
Do Ctrl+C
...instant crash...

**System Information** Xbuntu / AMD **Blender Version** a33034c **Short description of error** Copy a disabled field is an instant crash **Exact steps for others to reproduce the error** New file Create an armature Go to edit mode Extrude the bone so you have also a child bone Go to pose mode Select the child bone Go to the Bone panel and scroll down to Relations Hover over the Parent field (which should be disabled but shows the name of the parent bone) Do Ctrl+C ...instant crash...
Author
Member

Added subscriber: @Hjalti

Added subscriber: @Hjalti

Added subscribers: @JacquesLucke, @brecht

Added subscribers: @JacquesLucke, @brecht
Jacques Lucke was assigned by Brecht Van Lommel 2018-09-28 12:48:43 +02:00

@JacquesLucke, can you check?

@JacquesLucke, can you check?
Member

Will check

Will check

This issue was referenced by 3341d42ad5

This issue was referenced by 3341d42ad5669edde09025043be9a221f7ee789b
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56947
No description provided.