Fix T56947: Copy text from disabled search menu crashed

Reviewers: brecht

Differential Revision: https://developer.blender.org/D3745